--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kestens Afwerking</title>
   </head>
   <body>
-    <h1>Kestens Afwerking</h1>
-    <p>Website is live.</p>
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
